ZONG-38 continued