@@ -2,24 +2,31 @@ package com.xenoage.zong.io.musicxml.in.readers;
 
 import static com.xenoage.utils.NullUtils.notNull;
 import static com.xenoage.utils.collections.CollectionUtils.alist;
+import static com.xenoage.utils.iterators.It.it;
 import static com.xenoage.utils.kernel.Tuple2.t;
 import static com.xenoage.utils.math.Fraction._0;
 import static com.xenoage.utils.math.Fraction.fr;
+import static com.xenoage.zong.core.position.MP.getMP;
 import static com.xenoage.zong.core.text.UnformattedText.ut;
 import static com.xenoage.zong.io.musicxml.in.readers.MusicReader.readDuration;
 import static com.xenoage.zong.io.musicxml.in.readers.OtherReader.readBezierPoint;
 import static com.xenoage.zong.io.musicxml.in.readers.OtherReader.readPositioning;
 import static com.xenoage.zong.io.musicxml.in.readers.OtherReader.readVSide;
 
+import java.util.ArrayList;
 import java.util.List;
 
+import com.xenoage.utils.Parser;
 import com.xenoage.utils.collections.CollectionUtils;
+import com.xenoage.utils.iterators.It;
 import com.xenoage.utils.kernel.Tuple2;
 import com.xenoage.utils.math.Fraction;
 import com.xenoage.utils.math.VSide;
+import com.xenoage.zong.commands.core.music.chord.DirectionAdd;
 import com.xenoage.zong.core.Score;
 import com.xenoage.zong.core.music.MusicContext;
 import com.xenoage.zong.core.music.Pitch;
+import com.xenoage.zong.core.music.WaypointPosition;
 import com.xenoage.zong.core.music.chord.Articulation;
 import com.xenoage.zong.core.music.chord.Chord;
 import com.xenoage.zong.core.music.chord.Grace;
@@ -31,7 +38,11 @@ import com.xenoage.zong.core.music.direction.DynamicsType;
 import com.xenoage.zong.core.music.format.BezierPoint;
 import com.xenoage.zong.core.music.format.Positioning;
 import com.xenoage.zong.core.music.lyric.Lyric;
+import com.xenoage.zong.core.music.lyric.SyllableType;
 import com.xenoage.zong.core.music.rest.Rest;
+import com.xenoage.zong.core.music.slur.SlurType;
+import com.xenoage.zong.core.music.slur.SlurWaypoint;
+import com.xenoage.zong.core.position.MP;
 import com.xenoage.zong.musicxml.types.MxlArticulations;
 import com.xenoage.zong.musicxml.types.MxlBeam;
 import com.xenoage.zong.musicxml.types.MxlDynamics;
@@ -39,8 +50,12 @@ import com.xenoage.zong.musicxml.types.MxlLyric;
 import com.xenoage.zong.musicxml.types.MxlNotations;
 import com.xenoage.zong.musicxml.types.MxlNote;
 import com.xenoage.zong.musicxml.types.MxlPitch;
+import com.xenoage.zong.musicxml.types.MxlSlurOrTied;
+import com.xenoage.zong.musicxml.types.MxlSlurOrTied.MxlElementType;
 import com.xenoage.zong.musicxml.types.MxlStem;
 import com.xenoage.zong.musicxml.types.MxlSyllabicText;
+import com.xenoage.zong.musicxml.types.attributes.MxlPosition;
+import com.xenoage.zong.musicxml.types.attributes.MxlPrintStyle;
 import com.xenoage.zong.musicxml.types.choice.MxlArticulationsContent;
 import com.xenoage.zong.musicxml.types.choice.MxlArticulationsContent.MxlArticulationsContentType;
 import com.xenoage.zong.musicxml.types.choice.MxlCueNote;
@@ -69,7 +84,7 @@ public final class ChordReader {
 	 * including slurs and ties.
 	 * All but the first given note must have a chord-element inside.
 	 */
-	public static MusicReaderContext readChord(MusicReaderContext context, List<MxlNote> mxlNotes) {
+	public static void readChord(MusicReaderContext context, List<MxlNote> mxlNotes) {
 		MxlNote mxlFirstNote = mxlNotes.get(0);
 		MxlNoteContentType mxlFirstNoteType = mxlFirstNote.getContent().getNoteContentType();
 
@@ -114,9 +129,7 @@ public final class ChordReader {
 		if (editorialVoice != null) {
 			String mxlVoice = editorialVoice.getVoice();
 			if (mxlVoice != null) {
-				Tuple2<MusicReaderContext, Integer> tVoice = context.getVoice(staff, mxlVoice);
-				context = tVoice.get1();
-				staffVoice = tVoice.get2();
+				staffVoice = context.getVoice(staff, mxlVoice);
 			}
 		}
 
@@ -138,39 +151,36 @@ public final class ChordReader {
 				chord = new Chord(alist(new Note(pitch)), duration);
 			}
 			chord.setCue(cue);
-			context = context.writeVoiceElement(chord, staff, staffVoice);
+			context.writeVoiceElement(chord, staff, staffVoice);
 			//collect the following notes of this chord
 			for (int i = 1; i < mxlNotes.size(); i++) {
-				Tuple2<MusicReaderContext, Chord> tChord = plusChordNote(context, mxlNotes.get(i), chord,
-					staff);
-				context = tChord.get1();
-				chord = tChord.get2();
+				addChordNote(context, mxlNotes.get(i), chord, staff);
 			}
 		}
 		else if (mxlFNCType == MxlFullNoteContentType.Rest) {
 			//write a rest
-			context = context.writeVoiceElement(new Rest(duration, cue), staff, staffVoice);
+			Rest rest = new Rest(duration);
+			rest.setCue(cue);
+			context.writeVoiceElement(rest, staff, staffVoice);
 		}
 
 		//more details for chord
 		if (chord != null) {
 			//check if chord could be written. if not, return
-			if (context.getScore().globals.getIMP(chord) == null)
-				return context;
+			if (getMP(chord) == null)
+				return;
 
 			//stem
 			Stem stem = readStem(context, mxlFirstNote, chord, staff);
 			if (stem != null) {
-				Chord oldChord = chord;
-				chord = oldChord.withStem(stem);
-				context = context.replaceChord(oldChord, chord);
+				chord.setStem(stem);
 			}
 
 			//add beams
 			//TODO: also read beams for grace and cue chords
 			if (mxlFirstGraceNote == null && !cue) {
 				//currently we read only the beam elements with number 1
-				for (MxlBeam mxlBeam : mxlFirstNote.beams) {
+				for (MxlBeam mxlBeam : it(mxlFirstNote.getBeams())) {
 					int number = mxlBeam.getNumber();
 					//read only level 1 beams
 					if (number != 1)
@@ -178,53 +188,52 @@ public final class ChordReader {
 					switch (mxlBeam.getValue()) {
 						case Begin: {
 							//open new beam
-							context = context.openBeam(number);
-							context = context.addBeamChord(chord, number);
+							context.openBeam(number);
+							context.addBeamChord(chord, number);
 							break;
 						}
+						case ForwardHook:
+						case BackwardHook:
 						case Continue: {
 							//add chord to beam
-							context = context.addBeamChord(chord, number);
+							context.addBeamChord(chord, number);
 							break;
 						}
 						case End: {
 							//close the beam and create it
-							context = context.addBeamChord(chord, number);
-							Tuple2<MusicReaderContext, PVector<Chord>> t = context.closeBeam(number);
-							if (t.get2() != null) {
-								context = t.get1();
-								context = context.writeBeam(t.get2());
-							}
+							context.addBeamChord(chord, number);
+							context.closeBeam(number);
 						}
 					}
 				}
 			}
 
 			//notations   
-			for (MxlNotations mxlNotations : mxlFirstNote.notations) {
-				Tuple2<MusicReaderContext, Chord> t = readNotations(context, mxlNotations, chord, 0, staff); //first note has index 0
-				context = t.get1();
-				chord = t.get2();
+			for (MxlNotations mxlNotations : it(mxlFirstNote.getNotations())) {
+				readNotations(context, mxlNotations, chord, 0, staff); //first note has index 0
 			}
 
 			//lyric
-			//not supported yet: in MusicXML also rests can have lyrics. see mesaure 36 in Echigo-Jishi
-			for (MxlLyric mxlLyric : mxlFirstNote.lyrics) {
+			//not supported yet: in MusicXML also rests can have lyrics. see measure 36 in Echigo-Jishi
+			for (MxlLyric mxlLyric : it(mxlFirstNote.getLyrics())) {
 				//not supported yet: number which are not integer and
 				//name instead (?) of number attribute
-				String number = mxlLyric.number;
+				String number = mxlLyric.getNumber();
 				int verse = 0;
 				if (number != null) {
 					Integer i = Parser.parseIntegerNull(number);
 					if (i != null)
 						verse = i - 1;
 				}
-				Lyric.SyllableType syllableType = SyllableType.Single;
+				SyllableType syllableType;
 				MxlLyricContentType mxlLCType = mxlLyric.getContent().getLyricContentType();
 				if (mxlLCType == MxlLyricContentType.SyllabicText) {
 					MxlSyllabicText mxlSyllabicText = (MxlSyllabicText) mxlLyric.getContent();
 					//a syllable
 					switch (mxlSyllabicText.getSyllabic()) {
+						case Single:
+							syllableType = SyllableType.Single;
+							break;
 						case Begin:
 							syllableType = SyllableType.Begin;
 							break;
@@ -236,7 +245,8 @@ public final class ChordReader {
 							break;
 					}
 					//the next element must be the text element
-					context = context.writeAttachment(chord, new Lyric(ut(mxlSyllabicText.getText()
+					//GOON
+					context.writeAttachment(chord, new Lyric(ut(mxlSyllabicText.getText()
 						.getValue()), syllableType, verse));
 				}
 				else if (mxlLCType == MxlLyricContentType.Extend) {
@@ -256,7 +266,7 @@ public final class ChordReader {
 	 * a chord (but not the first note element of the chord), and adds it to the given chord.
 	 * Also the notations of this note are read.
 	 */
-	private static Tuple2<MusicReaderContext, Chord> plusChordNote(MusicReaderContext context,
+	private static void addChordNote(MusicReaderContext context,
 		MxlNote mxlNote, Chord chord, int staffIndexInPart) {
 		//only pitch is interesting for us, since we do not allow
 		//different durations for notes within a chord or other strange stuff
@@ -265,71 +275,67 @@ public final class ChordReader {
 			if (mxlFNC.getFullNoteContentType() == MxlFullNoteContentType.Pitch) {
 				Pitch pitch = ((MxlPitch) mxlFNC).getPitch();
 				Note note = new Note(pitch);
-				Chord oldChord = chord;
-				chord = chord.plusNote(note);
-				context = context.replaceChord(oldChord, chord);
+				chord.addNote(note);
 				//notations. we are only interested in the first element.
-				for (MxlNotations notations : mxlNote.notations) {
-					Tuple2<MusicReaderContext, Chord> t = readNotations(context, notations, chord,
-						chord.notes.indexOf(note), staffIndexInPart);
-					context = t.get1();
-					chord = t.get2();
+				if (mxlNote.getNotations() != null) {
+					for (MxlNotations notations : mxlNote.getNotations()) {
+						readNotations(context, notations, chord,
+							chord.getNotes().indexOf(note), staffIndexInPart);
+					}
 				}
 			}
 		}
-		return t(context, chord);
 	}
 
 	/**
 	 * Reads the slurs, ties and dynamics belonging to the given chord and note.
-	 * The beginnings and endings of the curved lines are saved in the context.
-	 * The updated context and chord are returned.
+	 * The beginnings and endings of the slurs are saved in the context.
 	 */
-	private static Tuple2<MusicReaderContext, Chord> readNotations(MusicReaderContext context,
+	private static void readNotations(MusicReaderContext context,
 		MxlNotations mxlNotations, Chord chord, int noteIndex, int staffIndexInPart) {
 		for (MxlNotationsContent mxlNC : mxlNotations.getElements()) {
 			MxlNotationsContentType mxlNCType = mxlNC.getNotationsContentType();
 
 			switch (mxlNCType) {
-				case CurvedLine: {
-					//slur or tie
-					MxlCurvedLine mxlCurvedLine = (MxlCurvedLine) mxlNC;
-					Pitch pitch = chord.notes.get(noteIndex).getPitch();
+				case SlurOrTied: {
+					//slur or tied
+					MxlSlurOrTied mxlSlur = (MxlSlurOrTied) mxlNC;
+					Pitch pitch = chord.getNotes().get(noteIndex).getPitch();
 					float noteLP = context.getMusicContext(staffIndexInPart).computeLinePosition(pitch);
 
 					//type
-					CurvedLine.Type type;
-					if (mxlCurvedLine.getElementType() == MxlElementType.Slur)
-						type = CurvedLine.Type.Slur;
+					SlurType type;
+					if (mxlSlur.getElementType() == MxlElementType.Slur)
+						type = SlurType.Slur;
 					else
-						type = CurvedLine.Type.Tie;
+						type = SlurType.Tie;
 
 					//number (tied does usually not use number, but distinguishes by pitch)
-					Integer number = mxlCurvedLine.getNumber();
-					BezierPoint bezierPoint = readBezierPoint(mxlCurvedLine.getPosition(),
-						mxlCurvedLine.getBezier(), context.getTenthMm(),
-						context.getStaffLinesCount(staffIndexInPart), noteLP, chord.duration);
-					VSide side = readVSide(mxlCurvedLine.getPlacement());
+					Integer number = mxlSlur.getNumber();
+					BezierPoint bezierPoint = readBezierPoint(mxlSlur.getPosition(),
+						mxlSlur.getBezier(), context.getTenthMm(),
+						context.getStaffLinesCount(staffIndexInPart), noteLP, chord.getDuration());
+					VSide side = readVSide(mxlSlur.getPlacement());
 
 					//waypoint
-					CurvedLineWaypoint wp = new CurvedLineWaypoint(chord, noteIndex, bezierPoint);
-					if (type == CurvedLine.Type.Tie && number == null) {
+					SlurWaypoint wp = new SlurWaypoint(chord, noteIndex, bezierPoint);
+					if (type == SlurType.Tie && number == null) {
 						//unnumbered tied
-						if (mxlCurvedLine.getType() == MxlStartStopContinue.Start)
-							context = context.openUnnumberedTied(pitch, wp, side);
+						if (mxlSlur.getType() == MxlStartStopContinue.Start)
+							context.openUnnumberedTied(pitch, wp, side);
 						else
-							context = context.closeUnnumberedTied(pitch, wp, side);
+							context.closeUnnumberedTied(pitch, wp, side);
 					}
 					else {
 						//numbered curved line
-						CurvedLineWaypoint.Type wpType;
-						if (mxlCurvedLine.getType() == MxlStartStopContinue.Start)
-							wpType = CurvedLineWaypoint.Type.Start;
-						else if (mxlCurvedLine.getType() == MxlStartStopContinue.Stop)
-							wpType = CurvedLineWaypoint.Type.Stop;
+						WaypointPosition wpPos;
+						if (mxlSlur.getType() == MxlStartStopContinue.Start)
+							wpPos = WaypointPosition.Start;
+						else if (mxlSlur.getType() == MxlStartStopContinue.Stop)
+							wpPos = WaypointPosition.Stop;
 						else
-							wpType = CurvedLineWaypoint.Type.Continue;
-						context = context.registerCurvedLine(type, wpType, number, wp, side);
+							wpPos = WaypointPosition.Continue;
+						context.registerSlur(type, wpPos, number, wp, side);
 					}
 					break;
 				}
@@ -338,52 +344,52 @@ public final class ChordReader {
 					//dynamics
 					MxlDynamics mxlDynamics = (MxlDynamics) mxlNC;
 					DynamicsType type = mxlDynamics.getElement();
-					Positioning positioning = readPositioning(mxlDynamics.getPrintStyle().getPosition(),
+					MxlPrintStyle printStyle = mxlDynamics.getPrintStyle();
+					MxlPosition position = (printStyle != null ? printStyle.getPosition() : null);
+					Positioning positioning = readPositioning(position,
 						mxlDynamics.getPlacement(), null, context.getTenthMm(),
 						context.getStaffLinesCount(staffIndexInPart));
-					context = context.withScore(plusAttachment(context.getScore(), chord, new Dynamics(type,
-						positioning)));
+					Dynamics dynamics = new Dynamics(type);
+					dynamics.setPositioning(positioning);
+					new DirectionAdd(dynamics, chord).execute();
 					break;
 				}
 
 				case Articulations: {
 					//articulations
 					MxlArticulations mxlArticulations = (MxlArticulations) mxlNC;
-					PVector<Articulation> articulations = pvec();
+					ArrayList<Articulation> articulations = alist();
 					for (MxlArticulationsContent mxlAC : mxlArticulations.getContent()) {
 						MxlArticulationsContentType mxlACType = mxlAC.getArticulationsContentType();
-						Articulation.Type at = null;
+						Articulation a = null;
 						switch (mxlACType) {
 							case Accent:
-								at = Articulation.Type.Accent;
+								a = Articulation.Accent;
 								break;
 							case Staccatissimo:
-								at = Articulation.Type.Staccatissimo;
+								a = Articulation.Staccatissimo;
 								break;
 							case Staccato:
-								at = Articulation.Type.Staccato;
+								a = Articulation.Staccato;
 								break;
 							case StrongAccent:
-								at = Articulation.Type.StrongAccent;
+								a = Articulation.StrongAccent;
 								break;
 							case Tenuto:
-								at = Articulation.Type.Tenuto;
+								a = Articulation.Tenuto;
 								break;
 						}
-						if (at != null) {
-							articulations = articulations.plus(new Articulation(at));
+						if (a != null) {
+							articulations.add(a);
 						}
 					}
 					if (articulations.size() > 0) {
-						Chord oldChord = chord;
-						chord = chord.withArticulations(articulations);
-						context = context.replaceChord(oldChord, chord);
+						chord.setArticulations(articulations);
 					}
 					break;
 				}
 			}
 		}
-		return t(context, chord);
 	}
 
 	/**
@@ -397,7 +403,7 @@ public final class ChordReader {
 	 */
 	private static Stem readStem(MusicReaderContext context, MxlNote mxlNote, Chord chord, int staff) {
 		Stem ret = null;
-		MxlStem mxlStem = mxlNote.stem;
+		MxlStem mxlStem = mxlNote.getStem();
 		if (mxlStem != null) {
 			//direction
 			StemDirection direction = null;
@@ -417,11 +423,11 @@ public final class ChordReader {
 			}
 			//length
 			Float length = null;
-			if (mxlStem.getYPosition().getDefaultY() != null) {
+			MxlPosition yPos = mxlStem.getYPosition();
+			if (yPos != null && yPos.getDefaultY() != null) {
 				//convert position in tenths relative to topmost staff line into
 				//a length in interline spaces measured from the outermost chord note on stem side
-				float stemEndLinePosition = convertDefaultYToLinePosition(context, mxlStem.getYPosition()
-					.getDefaultY(), staff);
+				float stemEndLinePosition = convertDefaultYToLinePosition(context, yPos.getDefaultY(), staff);
 				length = Math.abs(stemEndLinePosition -
 					getNoteLinePosition(context, chord, stemEndLinePosition, staff)) / 2;
 			}
@@ -439,8 +445,8 @@ public final class ChordReader {
 	private static float convertDefaultYToLinePosition(MusicReaderContext context, float defaultY,
 		int staff) {
 		Score score = context.getScore();
-		float defaultYInMm = defaultY * score.format.interlineSpace / 10;
-		float interlineSpace = score.getInterlineSpace(context.getPartStavesIndices().getStart() +
+		float defaultYInMm = defaultY * score.getFormat().getInterlineSpace() / 10;
+		float interlineSpace = score.getInterlineSpace(context.getPartStaves().getStart() +
 			staff);
 		int linesCount = context.getStaffLinesCount(staff);
 		return 2 * (linesCount - 1) + 2 * defaultYInMm / interlineSpace;
@@ -453,15 +459,15 @@ public final class ChordReader {
 	private static float getNoteLinePosition(MusicReaderContext context, Chord chord, float nearTo,
 		int staff) {
 		MusicContext mc = context.getMusicContext(staff);
-		Vector<Pitch> pitches = chord.getPitches();
+		List<Pitch> pitches = chord.getPitches();
 		//if there is just one note, it's easy
 		if (pitches.size() == 1) {
-			return mc.computeLinePosition(pitches.getFirst());
+			return mc.computeLinePosition(pitches.get(0));
 		}
 		//otherwise, test for the topmost and bottommost note
 		else {
-			float top = mc.computeLinePosition(pitches.getLast());
-			float bottom = mc.computeLinePosition(pitches.getFirst());
+			float top = mc.computeLinePosition(pitches.get(pitches.size() - 1));
+			float bottom = mc.computeLinePosition(pitches.get(0));
 			return (Math.abs(top - nearTo) < Math.abs(bottom - nearTo) ? top : bottom);
 		}
 	}
